--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "homepage": "https://github.com/bchiatt/i-fit",
   "authors": [
-    "Brian Hiatt <brian.hiatt41@gmail.com>"
+    "Brian Hiatt <brian.hiatt41@gmail.com>",
     "Matt Keef <mkeef1@gmail.com>",
     "JoAnn Brooks <joannbrooks036@gmail.com>"
   ],
